[build-system]
requires = ["setuptools", "setuptools-scm", "pandas", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ietools"
version = "0.1"
authors = [
  { name="Gana Natarajan", email="gana1984@gmail.com" },
]
description = "A package implementing commonly used Industrial Engineering and Management tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["industrial engineering", "management", "ie"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3",
"Development Status :: 3 - Alpha", 
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent"]

[project.urls]
"Bug Tracker" =  "https://github.com/gana1984/ietools/issues"
"Homepage" = "https://github.com/gana1984/ietools"

[tools.setuptools.package.find]
where = ["ietools"]